ChangeLog
==========

release 3.16
- 15x report generator script which uses a sqlite database for storing header information

release 3.15
- generate a single merged cram if multiple library id's for a sample 
- top-up-merge modules added to query for merges needed and to set off  wr jobs for p4 and QC

release 3.14
- use file name generator from npg_pipeline::product
- local_cram option added (original merge_aligned p4 template modified to handle locally written crams)

release 3.13.1
- test data fixes following ml warehouse schema changes, see
  https://github.com/wtsi-npg/ml_warehouse/pull/104 for details

release 3.13
- add target = library to iRODS meta data for single lane crams meeting lane fraction criteria
- use lane fraction rather than minimum component count
- bug fix for single library crams

release 3.12
- allow for re-headering of merged library crams 
- temporary fix for bam_flagstats input file check

release 3.11
- code added to enable optionally running on Openstack via wr
- remove check for format of ID field in the input headers
- new script to report QC complete study samples which lack a sample accession number

release 3.10
- replace deprecated srpipe::runfolder by npg_pipeline::illumina::runfolder

release 3.9
- bjobs username removed to allow for gspipe on gseq
- default samtools changed from samtools1 to samtools (as now samtools1 is just a link to samtools)
- add ability to specify cluster in config  (for running on gseq)
- extra logging where library merge previously done but composition has changed 

release 3.8
- make library merge jobs mlwarehouse query free by moving query for reference_genome_path (for running on gseq)
- remove test for gseq

release 3.7
- minor npg_run_merge_generator option handling tweaks

release 3.6
- LSF resources command modified to prioritise packing jobs on to hosts with the fewest free slots
- minor changes to support use on gseq cluster.

release 3.5