@@ -1,18 +1,19 @@
 #!/usr/bin/env perl
-#########
-# Author:        jillian
-# Created:       2015-07-01
-#
-
 
 use strict;
 use warnings;
 use FindBin qw($Bin);
 use lib ( -d "$Bin/../lib/perl5" ? "$Bin/../lib/perl5" : "$Bin/../lib" );
+use Log::Log4perl qw(:levels);
 
 use npg_seq_melt::merge::library;
 
 our $VERSION = '0';
+
+my $layout = '%d %-5p %c - %m%n';
+Log::Log4perl->easy_init({layout => $layout,
+                          level  => $INFO,
+                          utf8   => 1});
 
 npg_seq_melt::merge::library->new_with_options()->process();
 
@@ -75,6 +76,8 @@ npg_library_merge jobs set off from npg_seq_melt::merge::generator
 
 =item FindBin
 
+=item Log::Log4perl
+
 =item npg_seq_melt::merge::library
 
 =back
@@ -89,7 +92,7 @@ Jillian Durham E<lt>jillian@sanger.ac.ukE<gt>
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2015 by Genome Research Limited
+Copyright (C) 2015,2016,2018,20121 GRL.
 
 This file is part of NPG.
 
